force-app/main/default/objects/numm__GDT__c/numm__GDT__c.object-meta.xml
<CustomObject>
    <label>Gestion des temps</label>
    <nameField>
        <displayFormat>GTD-{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gestions des temps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>