force-app/main/default/objects/numm__GDT__c/fields/numm__Annee__c.field-meta.xml
<CustomField>
    <fullName>numm__Annee__c</fullName>
    <defaultValue>Text(Year(TODAY()))</defaultValue>
    <label>Année</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>