force-app/main/default/objects/numm__GDT__c/fields/numm__DateDeb__c.field-meta.xml
<CustomField>
    <fullName>numm__DateDeb__c</fullName>
    <inlineHelpText>Date de début de semaine</inlineHelpText>
    <label>Date du</label>
    <type>Date</type>
</CustomField>