force-app/main/default/objects/numm__GDT__c/fields/numm__DateFin__c.field-meta.xml
<CustomField>
    <fullName>numm__DateFin__c</fullName>
    <inlineHelpText>Date de fin de semaine</inlineHelpText>
    <label>Date au</label>
    <type>Date</type>
</CustomField>