force-app/main/default/objects/numm__GDT__c/fields/numm__Entite__c.field-meta.xml
<CustomField>
    <fullName>numm__Entite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entité</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>Gestions des temps</relationshipLabel>
    <relationshipName>Gestions_des_temps</relationshipName>
    <type>Lookup</type>
</CustomField>