force-app/main/default/objects/numm__GDT__c/fields/numm__Mois__c.field-meta.xml
<CustomField>
    <fullName>numm__Mois__c</fullName>
    <defaultValue>Month(TODAY())</defaultValue>
    <label>Mois</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>