force-app/main/default/objects/numm__GDT__c/fields/numm__NumberGDT__c.field-meta.xml
<CustomField>
    <fullName>numm__NumberGDT__c</fullName>
    <label>Numéro</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>