force-app/main/default/objects/numm__GDT__c/fields/numm__SomSousUnit__c.field-meta.xml
<CustomField>
    <fullName>numm__SomSousUnit__c</fullName>
    <label>SomSousUnit</label>
    <summarizedField>numm__GDTItem__c.numm__NbMinutes__c</summarizedField>
    <summaryForeignKey>numm__GDTItem__c.numm__GDTHeader__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>