force-app/main/default/objects/numm__GDT__c/fields/numm__SomUnit__c.field-meta.xml
<CustomField>
    <fullName>numm__SomUnit__c</fullName>
    <label>SomUnit</label>
    <summarizedField>numm__GDTItem__c.numm__NbHeure__c</summarizedField>
    <summaryForeignKey>numm__GDTItem__c.numm__GDTHeader__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>