force-app/main/default/objects/numm__GDT__c/fields/numm__Statut__c.field-meta.xml
<CustomField>
    <fullName>numm__Statut__c</fullName>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours de préparation</fullName>
                <default>true</default>
                <label>En cours de préparation</label>
            </value>
            <value>
                <fullName>Validée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>