force-app/main/default/objects/numm__GDT__c/fields/numm__TECH_UNIQPeriode__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_UNIQPeriode__c</fullName>
    <description>Id User Mois et année unique</description>
    <label>TECH_UNIQPeriode</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>