force-app/main/default/objects/numm__GDT__c/fields/numm__TechMaxDate__c.field-meta.xml
<CustomField>
    <fullName>numm__TechMaxDate__c</fullName>
    <label>TechMaxDate</label>
    <summarizedField>numm__GDTItem__c.numm__Date__c</summarizedField>
    <summaryForeignKey>numm__GDTItem__c.numm__GDTHeader__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>