force-app/main/default/objects/numm__GDT__c/fields/numm__TechMinDate__c.field-meta.xml
<CustomField>
    <fullName>numm__TechMinDate__c</fullName>
    <label>TechMinDate</label>
    <summarizedField>numm__GDTItem__c.numm__Date__c</summarizedField>
    <summaryForeignKey>numm__GDTItem__c.numm__GDTHeader__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>