force-app/main/default/objects/numm__GDT__c/fields/numm__Temps_Total__c.field-meta.xml
<CustomField>
    <fullName>numm__Temps_Total__c</fullName>
    <formula>IF ( numm__Unite__c =&#39;Journée&#39;,  TEXT(numm__SomUnit__c) &amp; &#39; jours&#39;, TEXT(numm__SomUnit__c + FLOOR(numm__SomSousUnit__c /60)) &amp; &#39; heures et &#39; &amp; TEXT( numm__SomSousUnit__c - FLOOR(numm__SomSousUnit__c /60)*60)  &amp; &#39; minutes&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temps Total</label>
    <type>Text</type>
</CustomField>