force-app/main/default/objects/numm__GDT__c/fields/numm__Unite__c.field-meta.xml
<CustomField>
    <fullName>numm__Unite__c</fullName>
    <formula>Text(numm__Entite__r.numm__Unite_Temps__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unité</label>
    <type>Text</type>
</CustomField>