force-app/main/default/objects/numm__GDT__c/validationRules/numm__MoisAZeroOUSup12.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__MoisAZeroOUSup12</fullName>
    <active>true</active>
    <description>Mois supérieur à &amp;é ou égal à 0</description>
    <errorConditionFormula>OR( numm__Mois__c ==0,numm__Mois__c &gt;12)</errorConditionFormula>
    <errorDisplayField>numm__Mois__c</errorDisplayField>
    <errorMessage>Le mois doit être compris entre 1 et 12.</errorMessage>
</ValidationRule>