force-app/main/default/objects/numm__GDT__c/validationRules/numm__Semaine_Entete_Verif_date_des_lignes.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__Semaine_Entete_Verif_date_des_lignes</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( numm__DateDeb__c !=null, OR( numm__DateDeb__c &gt; numm__TechMinDate__c , numm__DateFin__c &lt; numm__TechMaxDate__c ))</errorConditionFormula>
    <errorMessage>Les dates de l&#39;entête doivent être supérieures aux dates des lignes</errorMessage>
</ValidationRule>