force-app/main/default/objects/numm__GDT__c/validationRules/numm__VerifAnnee.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__VerifAnnee</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT ISNUMBER(numm__Annee__c), True, IF(OR(Value(numm__Annee__c)&lt;2000,Value(numm__Annee__c)&gt;2060),True, false))</errorConditionFormula>
    <errorDisplayField>numm__Annee__c</errorDisplayField>
    <errorMessage>Année incorrecte</errorMessage>
</ValidationRule>