force-app/main/default/objects/numm__GDT__c/validationRules/numm__VerifLigneMoisAnne.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__VerifLigneMoisAnne</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR (Text(Year(numm__TechMaxDate__c))!= numm__Annee__c,
Text(Year(numm__TechMaxDate__c))!= numm__Annee__c,
Month(numm__TechMaxDate__c)!=  numm__Mois__c ,
Month(numm__TechMinDate__c)!= numm__Mois__c ),numm__TechMaxDate__c !=null)</errorConditionFormula>
    <errorMessage>La mois et l&#39;année doit correspondre aux mois et l&#39;année des lignes</errorMessage>
</ValidationRule>