force-app/main/default/objects/numm__GDT__c/listViews/numm__All.listView-meta.xml
<ListView>
    <fullName>numm__All</fullName>
    <columns>numm__NumberGDT__c</columns>
    <columns>numm__User__c</columns>
    <columns>numm__Statut__c</columns>
    <columns>numm__Annee__c</columns>
    <columns>numm__Mois__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>